syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

option go_package = "portfolio-playground/pkg/proto;pb";


message Post {
    // Output only. ID is the unique identifier for the post.
    int32 id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
    // Title is the post's title.
    string title = 2;
    // Content is the post's content.
    string content = 3;
    // Post Slug is the post's slug.
    string slug = 4;
    // Post excerpt is the post's excerpt.
    string excerpt = 5;
    // Thumbnail is the post's thumbnail.
    //string thumbnail = 4;
    // Output only. CreatedAt is the post's creation time.
    google.protobuf.Timestamp create_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
    // Output only. UpdatedAt is the post's last update time.
    google.protobuf.Timestamp update_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message CreatePostRequest {
    // Post is the post.
    Post post = 1 [(google.api.field_behavior) = REQUIRED];
}
message CreatePostResponse {
    // Post is the post.
    Post post = 1;
}

message UpdatePostRequest {
    // Post is the post.
    Post post = 1 [(google.api.field_behavior) = REQUIRED];
}
message UpdatePostResponse {
    // Post is the post.
    Post post = 1;
}


message GetPostRequest {
    // ID is the unique identifier for the post.
    int32 id = 1;
}
message GetPostResponse {
    // Post is the post.
    Post post = 1;
}

message ListPostsRequest {
    // PageToken is the page token.
    int32 page_token = 1;
    // PageSize is the page size.
    int32 page_size = 2;
}

message ListPostsResponse {
    // Posts is the list of posts.
    repeated Post posts = 1;
    // NextPageToken is the next page token.
    int32 next_page_token = 2;
}

message DeletePostRequest {
    // ID is the unique identifier for the post.
    int32 id = 1;
}
message DeletePostResponse {
    // Post is the post.
    Post post = 1;
}
